# crab-reader

./: .gitignore  Cargo.toml  env.json  linkrepo.txt  readme-en.md  readme.md  todo
epubs/: bibbia_la_sacra_bibbia.epub  chinese_example.epub  machiavelli_il_principe.epub  pg1012.epub  svevo_la_coscienza_di_zeno.epub
saved_books/bibbia_la_sacra_bibbia/: metadata.json  page_0.html  page_1.html  page_10.html  page_100.html  page_101.html  page_102.html  page_11.html  page_12.html  page_13.html  page_14.html  page_15.html  page_16.html  page_17.html  page_18.html  page_19.html  page_2.html  page_20.html  page_21.html  page_22.html  page_23.html  page_24.html  page_25.html  page_26.html  page_27.html  page_28.html  page_29.html  page_3.html  page_30.html  page_31.html  page_32.html  page_33.html  page_34.html  page_35.html  page_36.html  page_37.html  page_38.html  page_39.html  page_4.html  page_40.html  (+64 more)
saved_books/collodi_pinocchio/: metadata.json  page_0.html  page_1.html  page_10.html  page_11.html  page_12.html  page_13.html  page_14.html  page_15.html  page_16.html  page_17.html  page_18.html  page_19.html  page_2.html  page_20.html  page_21.html  page_22.html  page_23.html  page_24.html  page_25.html  page_26.html  page_27.html  page_28.html  page_29.html  page_3.html  page_30.html  page_31.html  page_32.html  page_33.html  page_34.html  page_35.html  page_36.html  page_37.html  page_4.html  page_5.html  page_6.html  page_7.html  page_8.html  page_9.html
saved_books/pg69058-images/: page_0.html  (+6 more)
src/: main.rs  window.rs
utils/: epub_extraction.rs  list_books.rs
(+73 files in other folders)
