[package]
name = "crab-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.7.0", features = ["im", "image", "image-all"] }
epub = "1.2.3"
html2text = "0.4.2"
once_cell = "1.15.0"
serde_json = "1.0.85"