[package]
name = "crab-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.7.0", features = ["im", "image", "image-all"] }
epub = "1.2.3"
html2text = "0.4.2"
leptess = "0.13.4"
once_cell = "1.15.0"
rust-fuzzy-search = "0.1.1"
serde_json = "1.0.85"
threadpool = "1.8.1"
utf16string = "0.2.0"
