[package]
name = "crab-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derivative = "2.2.0"
dirs = "4.0.0"
druid = { version = "0.7.0", features = ["im", "image", "image-all"] }
epub = "1.2.3"
leptess = "0.13.4"
once_cell = "1.15.0"
pulldown-cmark = "0.9.2"
rhtml2md = "0.0.1"
rust-fuzzy-search = "0.1.1"
serde_json = "1.0.85"
threadpool = "1.8.1"
utf16string = "0.2.0"
